2002-04-01 Corey O'Connor <oconnorc@dogheadbone.com>
        * Additions and fixes to make a double clickable app.
          - The big problem was the os x glut was setting the working dir to Resources in the bundle. Ack.
          
2002-03-01 Corey O'Connor <oconnorc@dogheadbone.com>
        * Initial commit of mac os x support. 
          - Lot's of small changes. Mostly to header files and such.
          - Need to upload some build instructions as the configure files if it's mac os x expect some things to be in
            certain places. This will most likely be fine for most people but it needs some flexability.

2002-02-28 Daniel Horn <hellcatv@hotmail.com>
	* Added Terrain support for rendered meshes...this was a hell of a lot of work
	* Added glutStrokeFont and broke a level of abstraction cus I'm tired... basically GFX does not wrap glutStrokeFont at the moment...should be trivial fix...enjoy pretty fonts
	

2002-02-28 Alexander Rawass <alexannika@users.sourceforge.net>

	* ai_orderlist (not yet finished)
	* homepage/docu
	  - moved the installing and playing page into the player documentation
	  - put links to install and playing into main.html
	  - added a download for the docu-tarball
	

2002-02-27 Daniel Horn <hellcatv@hotmail.com>
	* Added caching to the collision data structures
	* Added caching to sphere meshes (shields were taking long time to load)
	* Added cargo to a unit...you can buy and sell cargo at places. Havenot added to interface yet
	* Cargo only makes you heavier right now...soon you will be able to sell for profit-- when you have money that is
	

2002-02-27 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified Universe
	  - can set 'scripting system' from scripting
	  - scripting gets notified if a new system is loaded:
	    initstarsystem is called
	* added faction 'pirates' to factions.xml
	* added re-launching of waves (nr. of waves now gets respected)
	

2002-02-27 Daniel Horn <hellcatv@hotmail.com>