@@ -146,7 +146,7 @@ void Cockpit::beginElement(const string &name, const AttributeList &attributes) 
   std::string myfont ("9x12.font");
   Names elem = (Names)element_map.lookup(name);
   Names attr;
-  unsigned char mymodes=0;
+  unsigned int mymodes=0;
   float xsize=-1,ysize=-1,xcent=FLT_MAX,ycent=FLT_MAX;
   float leftx=-10;  float rightx=-10;
   float topy=-10; float boty = -10;
@@ -269,8 +269,8 @@ void Cockpit::beginElement(const string &name, const AttributeList &attributes) 
     }
     goto loadsprite;
   case RADAR: newsprite = &Radar;goto loadsprite;
-  case LVDU: vdu.push_back(NULL);newvdu = &vdu.back();mymodes=VDU::WEAPON|VDU::DAMAGE|VDU::SHIELD;goto loadsprite;
-  case RVDU: vdu.push_back(NULL);newvdu = &vdu.back();mymodes=VDU::NAV|VDU::TARGET;goto loadsprite;
+  case LVDU: vdu.push_back(NULL);newvdu = &vdu.back();mymodes=VDU::MANIFEST|VDU::WEAPON|VDU::DAMAGE|VDU::SHIELD;goto loadsprite;
+  case RVDU: vdu.push_back(NULL);newvdu = &vdu.back();mymodes=VDU::TARGETMANIFEST|VDU::NAV|VDU::TARGET;goto loadsprite;
   case AVDU:vdu.push_back(NULL);newvdu = &vdu.back();mymodes=VDU::MSG;
     for(iter = attributes.begin(); iter!=attributes.end(); iter++) { 
       switch (attribute_map.lookup((*iter).name)) {
