@@ -23,15 +23,17 @@ class VDU: public Sprite {
   ///Holds a pointer to the font used to render text in the vdu
   TextPlane *tp;
   ///potential modes this computer is equipped for
-  unsigned char posmodes;
+  unsigned int posmodes;
   ///The current mode (VDU_MODE) that this unit is in
-  unsigned char thismode;
+  unsigned int thismode;
   ///Rows and columns of text this VDU can display
   short rows,cols;
   ///Draws a shield display in the VDU
   void DrawVDUShield (Unit * parent);
   ///Draws the target display of Unit *target (only call with nonNULL)
   void DrawTarget(Unit * parent, Unit *target);
+  ///Draws a list of cargo contents
+  void DrawManifest (Unit * parent, Unit * target);
   ///Draws the message from the messagecenter
   void DrawMessages(Unit *target);
   ///Draws the nav point this unit is heading to
@@ -45,9 +47,9 @@ class VDU: public Sprite {
   ///draws the target camera
 void  DrawStarSystemAgain (float x,float y,float w,float h, VIEWSTYLE viewStyle,Unit *parent,Unit *target);
 public:
-  ///Alert! To add a mode must change const array on the bottom
-  enum VDU_MODE {TARGET=0x1,NAV=0x2,WEAPON=0x4, DAMAGE=0x8, SHIELD=0x10, VIEW=0x20, MSG=0x40};
-  VDU(const char *file, TextPlane *textp,unsigned char modes, short rows, short cols, unsigned short *MaxArmor, float * maxhull);
+  ///Alert! To add a mode must change const array on the bottom. VIEW must remain LAST
+  enum VDU_MODE {TARGET=0x1,NAV=0x2,WEAPON=0x4, DAMAGE=0x8, SHIELD=0x10,  MANIFEST=0x20, TARGETMANIFEST=0x40, VIEW=0x80, MSG=0x100};
+  VDU(const char *file, TextPlane *textp,unsigned short modes, short rows, short cols, unsigned short *MaxArmor, float * maxhull);
   ///Draws the entire VDU, all data, etc
   void Draw(Unit * parent);
   ///Changes the mode of the current VDU to another legal mode
